--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Pattern Game</title>
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
